k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: neocare
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
